# task-manager

./: .gitignore  Makefile  README.md  app.json  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pythonCI.yml
api/: serializers.py  urls.py  views.py
custom_commands/management/commands/: makemessages_nofuzzy.py
labels/: models.py  tests.py  urls.py  views.py
labels/locale/ru/LC_MESSAGES/: django.mo  django.po
labels/migrations/: 0001_initial.py
statuses/: models.py  tests.py  urls.py  views.py
statuses/locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/migrations/: 0001_initial.py
task_manager/: heroku_ci_test_settings.py  mixins.py  settings.py  urls.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  (+1 more)
task_manager/static/: base-style.css
task_manager/templates/: base.html  index.html  messages.html
task_manager/templates/labels/: label-create.html  label-delete.html  label-update.html  labels-list.html
task_manager/templates/statuses/: status-create.html  status-delete.html  status-update.html  statuses-list.html
task_manager/templates/tasks/: task-create.html  task-delete.html  task-read.html  task-update.html  tasks-list.html
task_manager/templates/users/: user-delete.html  user-login.html  user-register.html  user-update.html  users-list.html
tasks/: admin.py  filters.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_change_tasks_for_labels.py
users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+3 files in other folders)
